# 42Host

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  windows-installer.yml
data/: io.github.whyoolw.Host42.desktop  resources.gresource.xml  style.css
installer/: 42host.iss  install-java.ps1
scripts/: package-windows.sh
src/: application.rs  config.rs  external.rs  main.rs  manager.rs  monitor.rs  server.rs  sidebar_row.rs  state.rs  window.rs
src/ui/: about.rs  console.rs  mod.rs  players.rs  plugins.rs  properties.rs  server_view.rs  settings.rs
