[package]
name = "host42"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["claude & whyoolw"]
description = "Приложение для запуска и управления серверами Minecraft"
license = "MIT"

[[bin]]
name = "42host"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sysinfo = "0.33"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[build-dependencies]
glib-build-tools = "0.20"
